src/components/AppsItem/style.scss
.apps-item {
  display: flex;
  flex-direction: column;
  background-color: rgba($colorWhite, 0.08);
  padding: 20px;
  border-radius: 12px;
  text-decoration: none;
  will-change: background-color;
  transition: background-color 0.2s $ease;

  &:hover,
  &:focus {
    background-color: rgba($colorWhite, 0.12);
  }

  &:first-child {
    margin-top: 0;
  }

  &__logo {
    flex: 0 0 auto;
    height: 40px;
    width: 40px;
    object-fit: contain;
    object-position: 0 0;
    margin-bottom: 36px;
  }

  &__content {
    flex: 1 1 auto;
  }

  &__title {
    font-size: 24px;
    line-height: 1;
    font-weight: 700;
    margin-bottom: 6px;
  }

  &__meta {
    display: flex;
    justify-content: space-between;
    font-size: 12px;
    font-weight: 600;
    color: rgba($colorWhite, 0.5);
  }
}

